--- a/lib/eCMS_web/components/layouts/student.html.heex
+++ b/lib/eCMS_web/components/layouts/student.html.heex
@@ -54,6 +54,9 @@
         id="user-dropdown"
         class="absolute bottom-14 left-4 w-50 bg-[#04675F] border border-gray-600 rounded shadow-lg hidden"
       >
+        <.link navigate={~p"/users/profile"} class="block px-4 py-2 hover:bg-tealLight">
+          👤 Profile
+        </.link>
         <.link navigate={~p"/users/settings"} class="block px-4 py-2 hover:bg-tealLight">
           ⚙️ Settings
         </.link>
