--- a/lib/eCMS_web/controllers/page_html/home.html.heex
+++ b/lib/eCMS_web/controllers/page_html/home.html.heex
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <!-- Login row -->
+    <!-- Login button -->
     <div class="mt-10 flex items-center justify-center gap-4">
       <img src={~p"/images/password-27.png"} alt="Lock" class="w-[42px] h-[42px]" />
       <a href={~p"/users/log_in"} class="bg-[#5fd6cf] hover:bg-[#04675F] text-black px-6 py-3 rounded shadow-lg font-semibold login-btn">
